# hex-table

./: .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
etc/: nvidia_icd.json
models/: model-v0-16-32-256-20260510  model-v0-16-8-64-20260514
notebooks/: mcts2.txt  ranks.csv  ranks.ipynb  skill.ipynb  skill.txt  strength.csv  strength.ipynb
src/: agent.rs  bb.rs  lib.rs  mcts.rs  mcts2.rs  util.rs  xpm.rs
src/nn/: constants.rs  mod.rs  model.rs  search.rs  transform.rs
src/nn/burn/: mod.rs  model.rs
src/nn/burn/train/: controller.rs  error.rs  metrics.rs  mod.rs  optimizer.rs  positions.rs  retry.rs  selfplay.rs
src/nn/candle/: burn_load.rs  mod.rs  model.rs
src/nn/train/: controller.rs  error.rs  mod.rs  optimizer.rs  positions.rs  retry.rs  selfplay.rs
