[package]
name = "hex-table"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bumpalo = { version = "3.20.2" }
burn = { version = "0.20.1", features = ["wgpu", "cpu", "fusion", "train", "std", "tui"] }
env_logger = "0.11.10"
ggez = "0.10.0-rc0"
iddqd = "0.4.0"
log = "0.4.29"
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.2", features = ["full"] }
