[package]
name = "hex-table"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bumpalo = { version = "3.20.2" }
burn = { version = "0.20.1", features = ["wgpu", "fusion", "autodiff", "std", "ndarray"], optional = true }
bytes = "1.11.1"
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
ggez = { version = "0.10.0-rc0", optional = true }
glob = "0.3.3"
iddqd = "0.4.0"
log = "0.4.29"
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = { version = "0.11.18", optional = true }
serde_json = "1.0.149"
sha2 = "0.11.0"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.52.2", features = ["full"] }
tqdm = "0.8.0"

[features]
default = ["nn", "burn"]
ui = ["dep:ggez"]
nn = []
burn = ["nn", "dep:burn"]
candle = ["nn", "dep:candle-core", "dep:candle-nn", "dep:rmp-serde", "dep:serde_bytes"]
candle-metal = ["candle", "candle-core/metal", "candle-nn/metal"]

[[bin]]
name = "play"
required-features = ["ui"]

[[bin]]
name = "train-cli"
required-features = ["burn"]

[[bin]]
name = "train-daemon"
required-features = ["burn"]

[[bin]]
name = "train-local"
required-features = ["burn"]

[[bin]]
name = "benchmark"
required-features = ["candle"]
